<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCdate"
        android:layout_weight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:paddingLeft="20dp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewInfo"
        android:layout_weight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />
</LinearLayout>